[gd_scene load_steps=17 format=3 uid="uid://rr3jhdfxf1ds"]

[ext_resource type="Script" path="res://Scene/Player/dino_creep.gd" id="1_2ap3e"]
[ext_resource type="Texture2D" uid="uid://bik2qmsxvj4uv" path="res://Art/Character/leg-animation.png" id="2_2he5q"]
[ext_resource type="Texture2D" uid="uid://440xojvj0ew0" path="res://Art/Character/Body2.png" id="3_1mrj2"]
[ext_resource type="Texture2D" uid="uid://ctqin7war0uds" path="res://Art/Character/Head3.png" id="4_uxdox"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r3tkc"]
radius = 11.0

[sub_resource type="Animation" id="Animation_4i8m3"]
resource_name = "Idle"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Leg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_32uu6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Leg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vyosg"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Leg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r7wju"]
_data = {
"Idle": SubResource("Animation_4i8m3"),
"RESET": SubResource("Animation_32uu6"),
"Walk": SubResource("Animation_vyosg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jk6ls"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rapg0"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oel8b"]
reset = false
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rqcmt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q2jv8"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5qy0g"]
states/Idle/node = SubResource("AnimationNodeAnimation_jk6ls")
states/Idle/position = Vector2(322.62, 100.062)
states/Walk/node = SubResource("AnimationNodeAnimation_rapg0")
states/Walk/position = Vector2(443.23, 100.016)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_oel8b"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_rqcmt"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_q2jv8")]
graph_offset = Vector2(-337.638, -12.975)

[sub_resource type="CircleShape2D" id="CircleShape2D_7bnpn"]
radius = 57.0088

[node name="DinoCreep" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_2ap3e")

[node name="Leg" type="Sprite2D" parent="."]
position = Vector2(7, 1)
rotation = -1.5708
texture = ExtResource("2_2he5q")
hframes = 4

[node name="Body" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("3_1mrj2")

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(-5, 0)
rotation = -1.5708
texture = ExtResource("4_uxdox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_r3tkc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r7wju")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_5qy0g")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_7bnpn")

[node name="SpawnTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout" flags=18]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
[connection signal="timeout" from="SpawnTime" to="." method="_on_spawn_time_timeout"]
